# wsg50-ros-pkg

./: README.md
wsg50_simulation/: CMakeLists.txt  package.xml
wsg50_simulation/controllers/: wsg50_integrate.yaml  wsg50_standalone.yaml
wsg50_simulation/launch/: view_wsg50.launch.py  wsg50_controllers.launch.py  wsg50_gazebo_sim.launch.py
wsg50_simulation/urdf/: wsg50.urdf.xacro  wsg_50.urdf.xacro
wsg_50_common/: CMakeLists.txt
wsg_50_common/action/: Move.action
wsg_50_common/srv/: Grasp.srv
wsg_50_control/: CMakeLists.txt  package.xml
wsg_50_control/include/wsg_50_control/: wsg_50.hpp  wsg_controller.hpp
wsg_50_control/src/: checksum.cpp  cmd.c  common.cpp  functions.cpp  interface.cpp  msg.c  pub.cpp  tcp.c  wsg_50.cpp  wsg_controller.cpp
wsg_50_control/test/: test_load_wsg_50_interface.cpp
wsg_50_driver/: CMakeLists.txt  package.xml
wsg_50_driver/config/: controller.yaml  wsg50_setup.yaml
wsg_50_driver/include/wsg_50_driver/: tcp.h
wsg_50_driver/src/: cmd.c  common.cpp  interface.cpp  main.cpp  msg.c  tcp.c
wsg_50_interface/: CMakeLists.txt  package.xml
wsg_50_interface/include/wsg_50_interface/: wsg_50.hpp  wsg_ros_interface.hpp
wsg_50_interface/src/: checksum.cpp  cmd.c  common.cpp  functions.cpp  interface.cpp  msg.c  serial.c  tcp.c  udp.c  wsg_50.cpp  wsg_ros_interface.cpp
wsg_50_simulation/: CMakeLists.txt
wsg_50_simulation/controllers/: wsg50_integrate.yaml  wsg_50_standalone.yaml
wsg_50_simulation/launch/: view_wsg50.launch.py  wsg50_controller_standalone.launch.py  wsg50_controllers.launch.py  wsg50_gazebo_sim.launch.py  wsg_50.launch.py  wsg_50_controllers.launch.py
wsg_50_simulation/urdf/: wsg50.urdf.xacro  wsg_50.urdf.xacro
